--- a/templates/pages/add_snippet.html
+++ b/templates/pages/add_snippet.html
@@ -47,12 +47,12 @@
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav ms-auto mb-2 mb-md-0">
                     <li class="nav-item me-2">
-                        <a class="btn btn-outline-secondary" href="">
+                        <a class="btn btn-outline-secondary" href="{% url 'snippets-add' %}">
                             Добавить сниппет
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-outline-info" href="">
+                        <a class="btn btn-outline-info" href="{% url 'snippets-list' %}">
                             Посмотреть сниппеты
                         </a>
                     </li>
@@ -109,7 +109,7 @@
 
 <footer class="footer mt-auto py-3">
     <div class="container">
-    <span class="text-muted">&copy; Юрченко Евгений, {% now "Y" %}. <br>
+    <span class="text-muted">&copy; Требунскй Алексей, {% now "Y" %}. <br>
         Шаблон заготовка для урока</span>
     </div>
 </footer>
