--- a/templates/inc/inc-header.html
+++ b/templates/inc/inc-header.html
@@ -1,23 +1,24 @@
-
+{% load static %}
 <header>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="/">
-                <img src="/static/images/logo.png" width="32" height="32" alt="">
+            <a class="navbar-brand" href="{% url "home" %}">
+                <img src="{% static 'images/logo.png' %}" width="32" height="32" alt="">
                 PythonBin
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                    aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
-                <ul class="navbar-nav ms-auto mb-2 mb-md-0">
-                    <li class="nav-item me-2">
-                        <a class="btn btn-outline-secondary" href="">
+                <ul class="navbar-nav mr-auto">
+                    <li class="form-inline">
+                        <a class="btn btn-outline-secondary" href="{% url "snippets-add" %}">
                             Добавить сниппет
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="btn btn-outline-info" href="">
+                    <li class="form-inline">
+                        <a class="btn btn-outline-info" href="{% url "snippets-list" %}">
                             Посмотреть сниппеты
                         </a>
                     </li>
